--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <div class="header__content">
       <img src="img/headerBg.png" alt="" class="header__content-img">
       <div class="header__desc">
-        <h1 class="header__title">nike</h1>
-        <p class="header__txt">Cool sneakers from <strong>NIKE</strong> for you</p>
+        <h1 class="header__title">adidas</h1>
+        <p class="header__txt">Cool sneakers from <strong>Adidas</strong> for you</p>
       </div>
     </div>
   </header>
